@@ -275,12 +275,11 @@ module ActiveMerchant
               :country => event.elements['Address'].get_text('CountryCode').to_s)
             description = event.get_text('EventDescription').to_s
             
-            # for now, just assume UTC, even though it probably isn't
-            time = Time.parse("#{event.get_text('Timestamp').to_s}")
-            zoneless_time = Time.utc(time.year, time.month, time.mday, time.hour, time.min, time.sec)
+            # the time is in ISO8601 (i.e. SOAP dateTime) format
+            time = Time.iso8601("#{event.get_text('Timestamp').to_s}")
             
             status_code = event.get_text('EventType').to_s
-            shipment_events << ShipmentEvent.new(description, zoneless_time, location, status_code)
+            shipment_events << ShipmentEvent.new(description, time, location, status_code)
           end
           shipment_events = shipment_events.sort_by(&:time)
         end
